// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tag /> ColorVariants story renders snapshot 1`] = `
<div
  class="tagList"
>
  <span
    class="tag tag--color-default text text--sm text--bold-weight"
    color="default"
  >
    ​
    <span
      class="tag__body"
    >
      default
    </span>
  </span>
  <span
    class="tag tag--color-warning text text--sm text--bold-weight"
    color="warning"
  >
    ​
    <span
      class="tag__body"
    >
      warning
    </span>
  </span>
  <span
    class="tag tag--color-brand text text--sm text--bold-weight"
    color="brand"
  >
    ​
    <span
      class="tag__body"
    >
      brand
    </span>
  </span>
  <span
    class="tag tag--color-stop text text--sm text--bold-weight"
    color="stop"
  >
    ​
    <span
      class="tag__body"
    >
      stop
    </span>
  </span>
  <span
    class="tag tag--color-yield text text--sm text--bold-weight"
    color="yield"
  >
    ​
    <span
      class="tag__body"
    >
      yield
    </span>
  </span>
  <span
    class="tag tag--color-go text text--sm text--bold-weight"
    color="go"
  >
    ​
    <span
      class="tag__body"
    >
      go
    </span>
  </span>
</div>
`;

exports[`<Tag /> Default story renders snapshot 1`] = `
<span
  class="tag tag--color-warning text text--sm text--bold-weight"
  color="warning"
>
  ​
  <span
    class="tag__body"
  >
    Tag text
  </span>
</span>
`;

exports[`<Tag /> OutlineVariants story renders snapshot 1`] = `
<div
  class="tagList"
>
  <span
    class="tag tag--color-default tag--outline text text--sm text--bold-weight"
    color="default"
  >
    ​
    <span
      class="tag__body"
    >
      default
    </span>
  </span>
  <span
    class="tag tag--color-warning tag--outline text text--sm text--bold-weight"
    color="warning"
  >
    ​
    <span
      class="tag__body"
    >
      warning
    </span>
  </span>
  <span
    class="tag tag--color-brand tag--outline text text--sm text--bold-weight"
    color="brand"
  >
    ​
    <span
      class="tag__body"
    >
      brand
    </span>
  </span>
  <span
    class="tag tag--color-stop tag--outline text text--sm text--bold-weight"
    color="stop"
  >
    ​
    <span
      class="tag__body"
    >
      stop
    </span>
  </span>
  <span
    class="tag tag--color-yield tag--outline text text--sm text--bold-weight"
    color="yield"
  >
    ​
    <span
      class="tag__body"
    >
      yield
    </span>
  </span>
  <span
    class="tag tag--color-go tag--outline text text--sm text--bold-weight"
    color="go"
  >
    ​
    <span
      class="tag__body"
    >
      go
    </span>
  </span>
</div>
`;
